# mediaforge

./: .gitignore  README.md  pyproject.toml  requirements.txt
mediaforge/: cli.py  downloader.py
mediaforge/gui/: app.py
mediaforge/gui/static/css/: style.css
mediaforge/gui/static/js/: app.js
mediaforge/gui/templates/: index.html
tests/: test_downloader.py
